--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ p{
     text-align: center;
     background-color: yellow;
 }
+table,td,th{
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 15px;
+    
+}
